--- a/DUAM/App.xaml
+++ b/DUAM/App.xaml
@@ -2,12 +2,12 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:DUAM"
+             xmlns:vm="clr-namespace:DUAM.ViewModels"
+             xmlns:cnvrt="clr-namespace:DUAM.Infrastructure.Converters"
              StartupUri="Views/Windows/MainWindow.xaml">
     <Application.Resources>
         <ResourceDictionary>
-            <ResourceDictionary.MergedDictionaries>
-                <ResourceDictionary Source="Resources/Themes/MainWindowTheme.xaml"/>
-            </ResourceDictionary.MergedDictionaries>
+            <vm:ViewModelLocator x:Key="Locator"/>
         </ResourceDictionary>
     </Application.Resources>
 </Application>
